# voloph

./: CLAUDE.md  CONTEXT.md  README.md  eslint.config.js  index.html  package.json  vitest.config.ts
.github/workflows/: release.yml
docs/: eval-harness.md  google-drive-mount.md  tuning-segmentation.md
docs/adr/: 0001-non-destructive-timeline.md  0002-local-audio-first-segmentation.md  0003-reference-in-place-virtual-grouping.md  0004-bundle-ffmpeg-sidecar.md  0005-cache-transcoded-proxies-for-playback.md  0005-transcode-incompatible-recordings-in-place.md  0006-hybrid-audio-visual-motion-segmentation.md  0007-capture-date-from-embedded-metadata.md  0007-seek-by-server-byte-offset-stream.md  0008-embedded-libmpv-playback.md  0009-vendored-wry-ipc-response-priority.md  0010-seek-by-server-byte-offset-stream.md  0011-two-typed-libraries-relative-identity.md  0012-session-bundles-snapshot-handoff.md  0013-analysis-files-content-keyed-compute-cache.md  0014-windows-embedded-playback-wid-child-hwnd.md  0015-eval-gated-occupancy-first-segmentation.md  0016-size-structure-occupancy-windowed-density.md  0017-precision-rebalanced-serve-confirmed-suppressed-tier.md  0018-round-4-red-corpus-exhausted-v6-end-edges.md
scripts/: fetch-libmpv.sh  fetch-pose-model.sh  fetch-sidecars.sh  fix-appimage.sh
src/: App.tsx  main.tsx
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json  tauri.windows.conf.json
src-tauri/binaries/: README.md  ffmpeg-x86_64-unknown-linux-gnu  ffprobe-x86_64-unknown-linux-gnu
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/models/: README.md
src-tauri/src/: db.rs  detect.rs  eval.rs  export.rs  lib.rs  media.rs  media_worker.rs  mpv.rs  pose.rs  segment.rs  staging.rs
src-tauri/src/db/: analysis.rs  annotations.rs  bundle.rs  capture_day.rs  carry.rs  library.rs  mod.rs  scan.rs  schema.rs  tests.rs  timeline.rs  work.rs
src-tauri/src/mpv/: linux.rs  mod.rs  windows.rs
src/components/: app-sidebar.tsx  debug-panel.tsx  moment-browser.tsx  recording-player-transport.test.ts  recording-player-transport.ts  recording-player.tsx  session-list.tsx  site-header.tsx  use-export.ts  use-mpv-surface.ts
src/components/debug-panel/: constants.ts  debug-section.tsx  diagnostics.ts  errors-tab.tsx  index.tsx  key-value-grid.tsx  overview-tab.tsx  runtime-tab.tsx  system-tab.tsx  theme-context.ts  types.ts  use-debug-diagnostics.ts
src/components/recording-player/: cheat-sheet.tsx  constants.ts  export-menu.tsx  index.tsx  keymap.ts  rally-block.tsx  rally-inspector.tsx  rally-rail.tsx  session-timeline.tsx  status-bar.tsx  timeline-toolbar.tsx  transport-bar.tsx  use-annotations.ts  use-mpv-transport.ts  use-session-export.ts  use-session-playback.test.ts  use-session-playback.ts  use-session-timelines.ts  use-timeline-edits.ts
src/components/session-list/: analysis-progress.test.ts  analysis-progress.ts  bundle-offers-box.tsx  index.tsx  library-header.tsx  recording-state.ts  session-block.tsx  session-dialogs.tsx  toast-stack.tsx  types.ts  unresolved-box.tsx  use-session-list.ts
src/components/ui/: alert-dialog.tsx
src/lib/: format.test.ts  format.ts  utils.ts
