[package]
name = "tauri-native"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_native_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
log = "0.4"
tauri-plugin-log = "2"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
walkdir = "2"


[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
opt-level = "s"   # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Ensures debug symbols are removed.

# Embedded libmpv playback (ADR 0008). libmpv is linked in-process and rendered
# into a GtkGLArea overlaid on the Tauri webview; Linux-only (the app ships on
# Linux). gtk/glib come transitively from Tauri 2 — pinned here so mpv.rs can use
# them directly. GL symbols for the mpv render API are resolved at runtime via
# the platform EGL loader (dlsym), so no GL crate is needed.
[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"
glib = "0.18"

# Vendored wry 0.55.1 with one patch (see ADR 0009): IPC custom-protocol
# responses are delivered at glib DEFAULT priority instead of DEFAULT_IDLE,
# which the continuously-rendering mpv GLArea starves — every `invoke()`
# response would otherwise stall until playback pauses. Grep the vendor tree
# for "VOLOPH PATCH" and re-apply when bumping wry.
[patch.crates-io]
wry = { path = "vendor/wry" }
