[package]
name = "tauri-native"
version = "0.1.0"
description = "Frictionless review of badminton games you recorded yourself."
authors = ["QuantumFF"]
edition = "2021"
# The crate ships two binaries — the Tauri app and the `eval-harness` dev CLI
# (ADR 0015). `tauri dev`/`cargo run` would be ambiguous without naming the app
# as the default; `cargo run --bin eval-harness` still reaches the harness.
default-run = "tauri-native"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_native_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# The eval harness (ADR 0015): a dev CLI that referees the segmenter against
# hand-corrected timelines. Reuses the app's DB, media, and segment code via the lib.
[[bin]]
name = "eval-harness"
path = "src/bin/eval-harness.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
log = "0.4"
tauri-plugin-log = "2"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
# Session bundles (ADR 0012) are a versioned JSON interchange file a receiver
# (#66) must parse back robustly — worth a real JSON codec, unlike the timeline's
# hand-rolled waveform array.
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
walkdir = "2"


[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
opt-level = "s"   # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Ensures debug symbols are removed.

# Embedded libmpv playback (ADR 0008). libmpv is linked in-process and rendered
# into a GtkGLArea overlaid on the Tauri webview. gtk/glib come transitively
# from Tauri 2 — pinned here so mpv/linux.rs can use them directly. GL symbols
# for the mpv render API are resolved at runtime via the platform EGL loader
# (dlsym), so no GL crate is needed.
[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"
glib = "0.18"

# Embedded libmpv playback on Windows (ADR 0014): the same client API, linked
# from libmpv-2.dll via `raw-dylib` (no import library) and rendered by mpv
# itself into a child HWND handed over with --wid. windows-sys carries only the
# few Win32 window calls the surface needs; raw-window-handle extracts the
# parent HWND from Tauri without coupling to its `windows` crate version.
[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.60", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_HiDpi",
] }
raw-window-handle = "0.6"

# Vendored wry 0.55.1 with one patch (see ADR 0009): IPC custom-protocol
# responses are delivered at glib DEFAULT priority instead of DEFAULT_IDLE,
# which the continuously-rendering mpv GLArea starves — every `invoke()`
# response would otherwise stall until playback pauses. Grep the vendor tree
# for "VOLOPH PATCH" and re-apply when bumping wry.
[patch.crates-io]
wry = { path = "vendor/wry" }
